--- a/Movie Library MVC/Movie Library MVC.csproj
+++ b/Movie Library MVC/Movie Library MVC.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>Movie_Library_MVC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="MySql.Data" Version="8.0.33" />
+  </ItemGroup>
+
 </Project>
